--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,11 @@ ipch/
 *.vspx
 *.sap
 
+#Visual Studio project
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
 # TFS 2012 Local Workspace
 $tf/
 
